# pico_w-framework

./: .gitignore  CMakeLists.txt  FreeRTOS_Kernel_import.cmake  README.md
docs/: CMakeLists.txt
libs/: CMakeLists.txt
libs/include/global/: debug_print.h  error_types.h  utils.h
libs/include/task1/: task1.h
libs/include/wlan/: lwipopts.h  mysntp.h  tcp_udp.h  wlan.h  wlan_state.h
libs/lib/global/: CMakeLists.txt  debug_print.c
libs/lib/task1/: CMakeLists.txt  task1.c
libs/lib/wlan/: CMakeLists.txt  mysntp.c  tcp_udp.c  wlan.c  wlan_state.c
src/: FreeRTOSConfig.h  lwipopts.h  main.c  project_conf.h.in
